Changed the title of the website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hangul Segmented Clock Test</title>
+    <title>한글 디지털 시계</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
