--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>한글 디지털 시계</title>
+    <link rel="shortcut icon" href="favicon.svg">
+
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
