Added a copyright notice

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
                 <object type="image/svg+xml" id="minute-left" data="segments/minute-both.svg" alt="minute-both"></object>
             </div>
         </div>
+        <div id="copyright">(C) 2022 Kuiprux All Rights Reserved.</div>
     </div>
 </html>
