--- a/index.html
+++ b/index.html
@@ -12,25 +12,37 @@
     <div id="container">
         <div id="description">
             <h1>한글 디지털 시계</h1>
-            <div>현재 시계 모드: <span id="current-mode">자동</span></div>
+            <div>현재 시계 모드: <button id="current-mode" onclick="toggleCurTimeMode()">자동</button></div>
             <div>화살표 키로 시각을 바꾸고,</div>
             <div>스페이스 키로 시계 모드를 자동으로 설정합니다.</div>
         </div>
         <div id="clock">
-            <div id="time-container">
-                <object type="image/svg+xml" id="time-right" data="segments/time-right.svg" alt="time-right"></object>
-                <object type="image/svg+xml" id="time-left" data="segments/time-left.svg" alt="time-left"></object>
+            <div class="button-container">
+                <div class="button"></div>
+                <button class="button" onclick="decreaseHour()">&lt;</button>
+                <button class="button" onclick="decreaseMinute()">&lt;</button>
             </div>
-            <div id="hour-container">
-                <object type="image/svg+xml" id="hour" data="segments/hour.svg" alt="hour"></object>
-                <object type="image/svg+xml" id="hour-right" data="segments/hour-right.svg" alt="hour-right"></object>
-                <object type="image/svg+xml" id="hour-left" data="segments/hour-left.svg" alt="hour-left"></object>
+            <div id="clock-container">
+                <div id="time-container">
+                    <object type="image/svg+xml" id="time-right" data="segments/time-right.svg" alt="time-right"></object>
+                    <object type="image/svg+xml" id="time-left" data="segments/time-left.svg" alt="time-left"></object>
+                </div>
+                <div id="hour-container">
+                    <object type="image/svg+xml" id="hour" data="segments/hour.svg" alt="hour"></object>
+                    <object type="image/svg+xml" id="hour-right" data="segments/hour-right.svg" alt="hour-right"></object>
+                    <object type="image/svg+xml" id="hour-left" data="segments/hour-left.svg" alt="hour-left"></object>
+                </div>
+                <div id="minute-container">
+                    <object type="image/svg+xml" id="minute" data="segments/minute.svg" alt="minute"></object>
+                    <object type="image/svg+xml" id="minute-right" data="segments/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-middle" data="segments/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-left" data="segments/minute-both.svg" alt="minute-both"></object>
+                </div>
             </div>
-            <div id="minute-container">
-                <object type="image/svg+xml" id="minute" data="segments/minute.svg" alt="minute"></object>
-                <object type="image/svg+xml" id="minute-right" data="segments/minute-both.svg" alt="minute-both"></object>
-                <object type="image/svg+xml" id="minute-middle" data="segments/minute-both.svg" alt="minute-both"></object>
-                <object type="image/svg+xml" id="minute-left" data="segments/minute-both.svg" alt="minute-both"></object>
+            <div class="button-container">
+                <div class="button"></div>
+                <button class="button" onclick="increaseHour()">&gt;</button>
+                <button class="button" onclick="increaseMinute()">&gt;</button>
             </div>
         </div>
         <div id="copyright">(C) 2022 Kuiprux All Rights Reserved.</div>
