--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             </div>
             <div id="clock-container">
                 <div id="time-container">
-                    <object type="image/svg+xml" id="time-right" data="segments/time-right.svg" alt="time-right"></object>
-                    <object type="image/svg+xml" id="time-left" data="segments/time-left.svg" alt="time-left"></object>
+                    <object type="image/svg+xml" id="time-right" data="segments/renewed/time-right-renewed.svg" alt="time-right"></object>
+                    <object type="image/svg+xml" id="time-left" data="segments/renewed/time-left-renewed.svg" alt="time-left"></object>
                 </div>
                 <div id="hour-container">
-                    <object type="image/svg+xml" id="hour" data="segments/hour.svg" alt="hour"></object>
-                    <object type="image/svg+xml" id="hour-right" data="segments/hour-right.svg" alt="hour-right"></object>
-                    <object type="image/svg+xml" id="hour-left" data="segments/hour-left.svg" alt="hour-left"></object>
+                    <object type="image/svg+xml" id="hour" data="segments/renewed/hour-renewed.svg" alt="hour"></object>
+                    <object type="image/svg+xml" id="hour-right" data="segments/renewed/hour-right-renewed.svg" alt="hour-right"></object>
+                    <object type="image/svg+xml" id="hour-left" data="segments/renewed/hour-left-renewed.svg" alt="hour-left"></object>
                 </div>
                 <div id="minute-container">
-                    <object type="image/svg+xml" id="minute" data="segments/minute.svg" alt="minute"></object>
-                    <object type="image/svg+xml" id="minute-right" data="segments/minute-both.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-middle" data="segments/minute-both.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-left" data="segments/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute" data="segments/renewed/minute-renewed.svg" alt="minute"></object>
+                    <object type="image/svg+xml" id="minute-right" data="segments/renewed/minute-both-renewed.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-middle" data="segments/renewed/minute-both-renewed.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-left" data="segments/renewed/minute-both-renewed.svg" alt="minute-both"></object>
                 </div>
             </div>
             <div class="button-container">
