Changed the paths of the segments

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             </div>
             <div id="clock-container">
                 <div id="time-container">
-                    <object type="image/svg+xml" id="time-right" data="segments/time-right.svg" alt="time-right"></object>
-                    <object type="image/svg+xml" id="time-left" data="segments/time-left.svg" alt="time-left"></object>
+                    <object type="image/svg+xml" id="time-right" data="segments/old/time-right.svg" alt="time-right"></object>
+                    <object type="image/svg+xml" id="time-left" data="segments/old/time-left.svg" alt="time-left"></object>
                 </div>
                 <div id="hour-container">
-                    <object type="image/svg+xml" id="hour" data="segments/hour.svg" alt="hour"></object>
-                    <object type="image/svg+xml" id="hour-right" data="segments/hour-right.svg" alt="hour-right"></object>
-                    <object type="image/svg+xml" id="hour-left" data="segments/hour-left.svg" alt="hour-left"></object>
+                    <object type="image/svg+xml" id="hour" data="segments/old/hour.svg" alt="hour"></object>
+                    <object type="image/svg+xml" id="hour-right" data="segments/old/hour-right.svg" alt="hour-right"></object>
+                    <object type="image/svg+xml" id="hour-left" data="segments/old/hour-left.svg" alt="hour-left"></object>
                 </div>
                 <div id="minute-container">
-                    <object type="image/svg+xml" id="minute" data="segments/minute.svg" alt="minute"></object>
-                    <object type="image/svg+xml" id="minute-right" data="segments/minute-both.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-middle" data="segments/minute-both.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-left" data="segments/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute" data="segments/old/minute.svg" alt="minute"></object>
+                    <object type="image/svg+xml" id="minute-right" data="segments/old/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-middle" data="segments/old/minute-both.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute-left" data="segments/old/minute-both.svg" alt="minute-both"></object>
                 </div>
             </div>
             <div class="button-container">
