Updated design (renewed5)

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             </div>
             <div id="clock-container">
                 <div id="time-container">
-                    <object type="image/svg+xml" id="time-right" data="segments/renewed4/time-right-renewed4.svg" alt="time-right"></object>
-                    <object type="image/svg+xml" id="time-left" data="segments/renewed4/time-left-renewed4.svg" alt="time-left"></object>
+                    <object type="image/svg+xml" id="time-right" data="segments/renewed5/time-right-renewed5.svg" alt="time-right"></object>
+                    <object type="image/svg+xml" id="time-left" data="segments/renewed5/time-left-renewed5.svg" alt="time-left"></object>
                 </div>
                 <div id="hour-container">
-                    <object type="image/svg+xml" id="hour" data="segments/renewed4/hour-renewed4.svg" alt="hour"></object>
-                    <object type="image/svg+xml" id="hour-right" data="segments/renewed4/hour-right-renewed4.svg" alt="hour-right"></object>
-                    <object type="image/svg+xml" id="hour-left" data="segments/renewed4/hour-left-renewed4.svg" alt="hour-left"></object>
+                    <object type="image/svg+xml" id="hour" data="segments/renewed5/hour-renewed5.svg" alt="hour"></object>
+                    <object type="image/svg+xml" id="hour-right" data="segments/renewed5/hour-right-renewed5.svg" alt="hour-right"></object>
+                    <object type="image/svg+xml" id="hour-left" data="segments/renewed5/hour-left-renewed5.svg" alt="hour-left"></object>
                 </div>
                 <div id="minute-container">
-                    <object type="image/svg+xml" id="minute" data="segments/renewed4/minute-renewed4.svg" alt="minute"></object>
-                    <object type="image/svg+xml" id="minute-right" data="segments/renewed4/minute-both-renewed4.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-middle" data="segments/renewed4/minute-both-renewed4.svg" alt="minute-both"></object>
-                    <object type="image/svg+xml" id="minute-left" data="segments/renewed4/minute-both-renewed4.svg" alt="minute-both"></object>
+                    <object type="image/svg+xml" id="minute" data="segments/renewed5/minute-renewed5.svg" alt="minute"></object>
+                    <object type="image/svg+xml" id="minute-right" data="segments/renewed5/minute-right-renewed5.svg" alt="minute-right"></object>
+                    <object type="image/svg+xml" id="minute-middle" data="segments/renewed5/minute-middle-renewed5.svg" alt="minute-middle"></object>
+                    <object type="image/svg+xml" id="minute-left" data="segments/renewed5/minute-left-renewed5.svg" alt="minute-left"></object>
                 </div>
             </div>
             <div class="button-container">
@@ -45,6 +45,6 @@
                 <button class="button" onclick="increaseMinute()">&gt;</button>
             </div>
         </div>
-        <div id="copyright">(C) 2022 Kuiprux All Rights Reserved.</div>
+        <div id="copyright">(C) 2022-2023 Kuiprux All Rights Reserved.</div>
     </div>
 </html>
